SMC-621 - prevent horizontal overflow on mobile

--- a/profile/themes/smc_base/scss/smc_base.scss
+++ b/profile/themes/smc_base/scss/smc_base.scss
@@ -57,9 +57,9 @@
 // footer elements
 @import "elements/footer.scss";
 
-body {
-  //background: #EEEEEE;
-  //padding: 50px;
+html, body {
+  max-width: 100%;
+  overflow-x: hidden;
 }
 
 .limiter {
